# CC-TPR

./: .env.example  .gitattributes  .gitignore  CC-TPR_Mac_Start.sh  CC-TPR_Start.bat  CC-TPR_Start.sh  CC-TPR_Win_Start.bat  LICENSE  PLAN.md  README.md  config.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  start-router.bat  stop-router.bat  stop-router.sh  stop-router_Mac.sh
.github/workflows/: ci.yml
src/: __init__.py  __main__.py  failover.py  main.py  quota.py  router.py  status.py  tokenizer.py
src/converters/: __init__.py  anthropic_to_openai.py  openai_to_anthropic_sse.py
src/providers/: __init__.py  base.py  deepseek.py  minimax.py  openrouter.py  zai.py
src/utils/: config.py  logger.py  mcp_check.py
statusline/: manual_statusline_start.py  smart-router-status.py
tests/: __init__.py  test_failover.py  test_mcp_check.py  test_minimax_vlm.py  test_router.py  test_status.py  test_tokenizer.py
